# ollama-webui

./: .SRCINFO  .gitignore  MANIFEST.in  PKGBUILD  app.py  ollama-webui.service  pyproject.toml  setup.py
conversations/: conv_20260216_152315_d0a06f30.json  conv_20260216_152607_8872734c.json  conv_20260216_153821_21a64fa4.json  conv_20260216_153830_f7d96bb3.json  conv_20260216_154126_f11db46f.json  conv_20260216_154147_f1ea6bd1.json  conv_20260216_154214_968e9c78.json  conv_20260216_154245_bb1aa347.json  conv_20260216_155300_e6f19e04.json  conv_20260216_155403_3dd0f373.json  conv_20260216_201502_5be0f510.json  conv_20260216_201519_8897543b.json  conv_20260216_201545_ac15dc3c.json  conv_20260216_201608_ef3ea08a.json  conv_20260216_201716_32dc6371.json  conv_20260216_201729_05bb0a5b.json  conv_20260216_201743_8e94aaa6.json  conv_20260216_201752_8c3467c9.json  conv_20260216_201836_2493cac0.json  conv_20260216_201903_a428f8e8.json  conv_20260216_201920_36ca6fb6.json  conv_20260216_202457_b0681129.json
mallama/: __init__.py  __main__.py  app.py
mallama.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mallama/static/: app.js  style.css
mallama/templates/: index.html
static/: app.js  style.css
templates/: index.html
