[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mallama"
version = "0.1.3"
description = "Browser UI for Ollama • Local LLM Interface • Web Chat Client for Local AI Models"
readme = "README.md"
authors = [
    {name = "Masoud Gholypour", email = "masoudgholypour2000@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "requests>=2.28.0",
    "werkzeug>=2.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/mesut2ooo/mallama"
Repository = "https://github.com/mesut2ooo/mallama.git"
Issues = "https://github.com/mesut2ooo/mallama/issues"

[project.scripts]
mallama = "mallama.__main__:main"